<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:layout_width="@dimen/layout_width_ImageView"
            android:layout_height="@dimen/layout_height_ImageView"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/fingerprint" />

        <TextView
            style="@style/textView_style"
            android:text="@string/txt_fingerprint"
            android:id="@+id/textView" />

        <EditText
            android:id="@+id/editText"
            style="@style/editText_style"
            android:layout_height="wrap_content"
            android:hint="@string/txt_emailaddress_hint"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/editText_style"
            android:inputType="textPassword"
            android:id="@+id/editText2"
            android:hint="@string/txt_password_hint" />

        <Button
            style="@style/button_style"
            android:text="@string/txt_login"
            android:id="@+id/buttonLogin" />

        <TextView
            style="@style/textView_style"
            android:text="@string/txt_account_enquiry"
            android:id="@+id/textView2"
            android:layout_height="30dp"
            android:layout_weight="0.01" />

        <Button
            android:id="@+id/button_signUp"
            style="@style/button_style"
            android:text="Sign Up" />
    </LinearLayout>

</RelativeLayout>
